--- a/Project/shlok/demo-app-report/src/index.html
+++ b/Project/shlok/demo-app-report/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>733 App</title>
-  <base href="/">
-  <!-- <base href="/sna101/3_datamen_CMPT_733/"> -->
+  <!-- <base href="/"> -->
+  <base href="/sna101/3_datamen_CMPT_733/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
